5.00/Test/syntax_errors/global_scope.c

int int;
int function (123){

}
// this is not an error
int x;

if (1) printf("Hello World\n");

int int_Fun(){

  return 0;
}

int 2int_Fun(){

  return 0;
}

char char_Fun(){

  return 'a';
}

int main (){

  printf("Global scope syntax errors.\n");

  return 1;

}
